--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "maath": "^0.7.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
+    "node": "^20.5.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
